tests/purs/failing/TypeQualification1/Lib1.purs
module Lib1 where

data X
data Y
